# SilkRoad

./: README.md  pyproject.toml
analytics/: silkroad.db
configs/: example.paper.yml
src/silkroad/: __init__.py  app.py
src/silkroad.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/silkroad/analytics/: __init__.py  logger.py
src/silkroad/backtesting/: __init__.py  backtrader_bridge.py  engine.py  results.py
src/silkroad/cli/: __init__.py  main.py
src/silkroad/config/: __init__.py  settings.py
src/silkroad/data/: __init__.py  base.py  ccxt_feed.py  factory.py  static_feed.py
src/silkroad/execution/: __init__.py  base.py  ibkr.py  paper.py  registry.py
src/silkroad/monitoring/: __init__.py  notifications.py
src/silkroad/risk/: __init__.py  manager.py
src/silkroad/strategy/: __init__.py  base.py  momentum.py  registry.py
src/silkroad/ui/: __init__.py  app.py  launcher.py
tests/: test_backtest.py  test_config.py
